#48 #49 #50 Completed APIHelper CustomRequestQueue and modified the movie table and movie model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     </string>
 
 
+    <!-- Credits -->
+    <string name="api_source">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
+
+
 </resources>
