--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="search_box_placeholder">Search Movie</string>
     <string name="search_result_title_placeholder">Title</string>
     <string name="search_result_rating_placeholder">Rating</string>
+    <string name="search_result_actors_placeholder">Actors</string>
     <string name="search_result_plot_placeholder">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ex arcu, facilisis at sapien nec, pharetra viverra odio. Donec at est luctus,
         vehicula urna placerat, vestibulum lorem. Etiam ullamcorper diam eu lacus dignissim, ac egestas sapien elementum. Duis pulvinar consectetur risus,
