#30 Created a class to sort movies and added sort functionality to the watch list page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,16 @@
     <!-- Watch List Page -->
     <string name="watch_list_page_title">Watch List</string>
 
+    <string-array name="sort_options">
+        <item>Date Added (Ascending)</item>
+        <item>Date Added (Descending)</item>
+        <item>Release Date (Ascending)</item>
+        <item>Release Date (Descending)</item>
+        <item>Title (Ascending)</item>
+        <item>Title (Descending)</item>
+    </string-array>
+
+
     <!-- Credits -->
     <string name="api_source">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
 
