--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,9 @@
 
     <!-- Theatres Page -->
     <string name="theatres_page_title">Theatres</string>
+    <string name="theatre_name_placeholder">Name</string>
+    <string name="theatre_address_placeholder">Address</string>
+
 
     <!-- Credits -->
     <string name="api_source">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
